[gd_scene load_steps=12 format=2]

[ext_resource path="res://script/title_screen/title_screen.gd" type="Script" id=1]
[ext_resource path="res://theme/font/title.tres" type="DynamicFont" id=2]
[ext_resource path="res://theme/font/menu_large.tres" type="DynamicFont" id=3]
[ext_resource path="res://asset/visual/background/IMG_1400.jpg" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 2635, 1465 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 16
expand_margin_left = 24.0
expand_margin_right = 24.0

[sub_resource type="StyleBoxLine" id=7]
color = Color( 0.188235, 0.447059, 0.2, 1 )
thickness = 8

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.870588, 0.705882, 0.341176, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.188235, 0.447059, 0.2, 1 )

[sub_resource type="Animation" id=1]
resource_name = "EaseIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, -0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="TitleScreen" type="Panel"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 0.901961, 0.901961, 0.901961, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 421.0
margin_top = 216.0
margin_right = 1499.0
margin_bottom = 864.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 1078.0
margin_bottom = 316.0
custom_styles/panel = SubResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer"]
margin_right = 1078.0
margin_bottom = 316.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 1078.0
margin_bottom = 152.0
custom_colors/font_color = Color( 1, 1, 0.870588, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Junket And Chip"

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 1078.0
margin_bottom = 316.0
custom_styles/panel = SubResource( 7 )

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer"]
margin_top = 4.0
margin_right = 1078.0
margin_bottom = 156.0
custom_colors/font_color = Color( 1, 1, 0.870588, 1 )
custom_fonts/font = ExtResource( 2 )
text = "1000 Years"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 1078.0
margin_bottom = 648.0
custom_constants/margin_top = 96

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/MarginContainer"]
margin_top = 96.0
margin_right = 1078.0
margin_bottom = 328.0

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 1078.0
margin_bottom = 114.0
focus_neighbour_top = NodePath("../SettingsButton")
focus_neighbour_bottom = NodePath("../SettingsButton")
custom_colors/font_color_disabled = Color( 1, 1, 0.870588, 1 )
custom_colors/font_color_focus = Color( 1, 1, 0.870588, 1 )
custom_colors/font_color = Color( 1, 1, 0.870588, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0.870588, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "Play"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 1078.0
margin_bottom = 232.0
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../PlayButton")
custom_colors/font_color_disabled = Color( 1, 1, 0.870588, 1 )
custom_colors/font_color_focus = Color( 1, 1, 0.870588, 1 )
custom_colors/font_color = Color( 1, 1, 0.870588, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0.870588, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "Enable Mobile"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/EaseIn = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
